--- a/CodeGenUtility/src/main/resources/static/html/requestFormS3.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestFormS3.html
@@ -8,7 +8,7 @@
 		
 		<div class="innerContainer2">
 			<form role="form" name="rdbmsForm">
-				<div id="sourceType">
+				<div id="sourceSystem">
 					<div class="row titleDiv">
 						<div class="col-md-12 titleDesc">
 							SOURCE TYPE
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 				</div>
-				sourceType div ends
+				sourceSystem div ends
 
 
 				Common for all sections
@@ -169,7 +169,7 @@
 					</div>
 
 				</div>
-				sourceType div ends
+				sourceSystem div ends
 				<div class="row" style="padding-left: 68.3%;">
 					<button type="button" class="btn targetButton"
 						ng-click="onCancel();">Cancel</button>
