--- a/CodeGenUtility/src/main/resources/static/html/successpopup.html
+++ b/CodeGenUtility/src/main/resources/static/html/successpopup.html
@@ -6,9 +6,9 @@ Your Job request has been submitted successfully.
 Do you want to check the Job status?
 </div>
 <div class="modal-footer">
-    <button class="btn btn-warning" type="button"
+    <button class="btn myPopups" type="button"
 ng-click="close()">Yes</button>
-<button class="btn btn-warning" type="button"
+<button class="btn myPopups" type="button"
 ng-click="close()">No</button>
 </div>
 
