--- a/CodeGenUtility/src/main/resources/static/index.html
+++ b/CodeGenUtility/src/main/resources/static/index.html
@@ -11,13 +11,7 @@
 <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- <link rel="stylesheet" href="css/bootstrap-select.css">
- -->
 <link rel="stylesheet" href="css/codegen.css">
-<link rel="stylesheet" href="css/custom.css">
-
-<!-- <script src="js/jquery-1.11.3.min.js"></script> -->
-<!-- <script src="js/bootstrap.min.js"></script> -->
 <script src="js/angular.js"></script>
 <script src="js/app.js"></script>
 <script src="js/ng-pattern-restrict.js"></script>
@@ -86,31 +80,26 @@
 				<div class="innerContainer1" ng-show="isAuthenticated">
 					<div class="row titleDiv">
 						<div class="col-md-12 titleDesc">
-							SOURCE LOCATION
-							<div style="padding-bottom: 24px"></div>
+							SOURCE TYPE
+							<div style="padding-bottom: 17px"></div>
 							<div class="stroke"></div>
 						</div>
 					</div>
 					<div class="row myRadioBtns">
-						<div class="col-md-3 ">
+						<div class="col-md-4">
 							<input class="btnRadio" type="radio" ng-model="homeRadioBtn" ng-change="redirectToPage(homeRadioBtn)"
 								value="RDBMS"><label class="sourcelocationLabel">
 								RDBMS </label>
 						</div>
-						<div class="col-md-3 ">
+						<div class="col-md-4">
 							<input class="btnRadio" type="radio" ng-model="homeRadioBtn" ng-change="redirectToPage(homeRadioBtn)"
 								value="Hadoop"> <label class="sourcelocationLabel">
 								Hadoop</label>
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-4">
 							<input class="btnRadio" type="radio" ng-model="homeRadioBtn" ng-change="redirectToPage(homeRadioBtn)"
 								value="Files"> <label class="sourcelocationLabel">
 								Files</label>
-						</div>
-						<div class="col-md-3">
-							<input class="btnRadio" type="radio" ng-model="homeRadioBtn" ng-change="redirectToPage(homeRadioBtn)"
-								value="S3"><label class="sourcelocationLabel">
-								S3</label>
 						</div>
 					</div>
 				</div>
@@ -124,7 +113,7 @@
 			<span><a href="http://www.ge.com/privacy" target="_blank">Privacy</a>&nbsp;</span> 
 			<span>&nbsp;<a href="http://www3.gehealthcare.com/en/footer/terms_and_conditions" target="_blank">Terms</a>&nbsp;</span> 
 			<span>&nbsp;<a href="http://www3.gehealthcare.com/en/about_us/contact_us" target="_blank">Contact</a>&nbsp;</span>
-			<span>&nbsp;<a href="http://www3.gehealthcare.com/en/about_us" target="_blank">Accessibility</a>&nbsp;</span>
+			<span>&nbsp;<a href="http://www.ge.com/accessibility" target="_blank">Accessibility</a>&nbsp;</span>
 			<span style="padding-right: 28px;">&nbsp;<a href="http://info.evidon.com/pub_info/4841?v=1" target="_blank">Cookies</a>&nbsp;</span>
 			<span class="copyright">&nbsp;©2017 General Electric</span>
 		</div>
