--- a/CodeGenUtility/src/main/resources/static/html/errorPopup.html
+++ b/CodeGenUtility/src/main/resources/static/html/errorPopup.html
@@ -9,7 +9,7 @@ due to a technical error!
 
 </div>
 <div class="modal-footer">
-    <button class="btn btn-warning" type="button"
+    <button class="btn myPopups" type="button"
 ng-click="close()">Ok</button>
 
 </div>
