--- a/CodeGenUtility/src/main/resources/static/html/login.html
+++ b/CodeGenUtility/src/main/resources/static/html/login.html
@@ -26,7 +26,7 @@
 				</div>
 				<button class="btn btn-primary loginbutton" type="submit"
 					ng-disabled="loginForm.$invalid "
-					ng-click="SubmitLogin(credentials)">Sign in</button>
+					ng-click="SubmitLogin(credentials)">Sign In</button>
 			</form>
 		</div>
 	</div>
