--- a/CodeGenUtility/src/main/resources/static/html/requestFormHadoop.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestFormHadoop.html
@@ -9,8 +9,8 @@
 				<div id="sourceSystem">
 					<div class="row titleDiv">
 						<div class="col-md-12 titleDesc">
-							SOURCE TYPE
-							<div style="padding-bottom: 24px"></div>
+							SOURCE
+							<div style="padding-bottom: 17px"></div>
 							<div class="stroke"></div>
 						</div>
 					</div>
@@ -19,6 +19,10 @@
 							<label class="labelSubHeader" style="padding-top: 0">SOURCE
 								TYPE</label> <input readonly="readonly" type="text"
 								class="customTextBox" ng-model="hadoop.sourceSystem">
+						</div>
+						<div class="col-md-3">
+							<label class="labelSubHeader" style="padding-top: 0">FILE NAME</label>
+							<input readonly="readonly" type="text"	class="customTextBox" ng-model="hadoop.fileName"> 
 						</div>
 						<div class="col-md-3">
 							<label class="labelSubHeader" style="padding-top: 0">FILE
@@ -96,8 +100,6 @@
 										is required. </span>
 								</div>
 							</div>
-						</div>
-						<div class="row" style="padding-bottom: 24px;">
 							<div class="col-md-3">
 								<label ng-class="rowtagDisable ? 'disabledlabel' : 'labelSubHeader'">ROW TAG</label> 
 								<input type="text"
@@ -111,6 +113,8 @@
 										required. </span>
 								</div>
 							</div>
+						</div>
+						<div class="row" style="padding-bottom: 24px;">
 							<div class="col-md-3">
 								<label ng-class="joinKeys  ? 'disabledlabel' : 'labelSubHeader'">UNIQUE
 									KEY</label> <input type="text" name="joinkey" required
