--- a/CodeGenUtility/src/main/resources/static/html/requestFormRDBMS.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestFormRDBMS.html
@@ -10,8 +10,8 @@
 				<div id="sourceSystem">
 					<div class="row titleDiv">
 						<div class="col-md-12 titleDesc">
-							SOURCE TYPE
-							<div style="padding-bottom: 24px"></div>
+							SOURCE
+							<div style="padding-bottom: 17px"></div>
 							<div class="stroke"></div>
 						</div>
 					</div>
@@ -67,10 +67,9 @@
 									required. </span>
 							</div>
 						</div>
-						<div class="col-md-3"
-							style="float: right; width: 207px; padding-top: 1%;">
+						<div class="col-md-3" style="float: right; width: 207px; padding-top: 1%;">
 							<input ng-show="showbutton" type="button"
-								class="btn btn-primary myButton" id="" value="Connect"
+								class="btn btn-primary myButton" id="" value="Connect" ng-disabled="rdbmsForm.$invalid"
 								ng-click="connectDB(codeGenRequest.username,codeGenRequest.password,codeGenRequest.dbConnection,codeGenRequest.dbName,codeGenRequest.sourceSystem)">
 							<input ng-show="showbuttonDisc" type="button"
 								class="btn btn-primary myButton" id="" value="Disconnect"
@@ -108,7 +107,7 @@
 					</div>
 
 					<div id="disabledDiv">
-						<div class="row">
+						<div class="row"  style="padding-top: 9px;">
 							<div class="col-md-3">
 								<label ng-class="class">DB SCHEMA</label>
 								 <select 
