--- a/CodeGenUtility/src/main/resources/static/html/requestFormHadoop.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestFormHadoop.html
@@ -22,7 +22,7 @@
 						</div>
 						<div class="col-md-3">
 							<label class="labelSubHeader" style="padding-top: 0">FILE NAME</label>
-							<input readonly="readonly" type="text"	class="customTextBox" ng-model="hadoop.fileName"> 
+							<input type="text"	class="customTextBox" ng-model="hadoop.fileName"> 
 						</div>
 						<div class="col-md-3">
 							<label class="labelSubHeader" style="padding-top: 0">FILE
