Defect fixes Neha

--- a/CodeGenUtility/src/main/resources/static/html/requestForm.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestForm.html
@@ -33,11 +33,19 @@
 						</div>
 						<div class="col-md-3">
 							<label
-								ng-class="toggleFileResources  ? 'labelSubHeader' : 'disabledlabel'"
-								style="padding-top: 0">FILE NAME</label> <input type="text" name="fileName"
-								ng-class="toggleFileResources  ? 'customTextBox' : 'disabledTextBox'"
-								ng-model="file.fileName"
+								class="labelSubHeader"
+								style="padding-top: 0">FILE NAME</label> 
+								<input type="text" name="fileName" required
+								class="customTextBox" id="fileName"
+								ng-model="file.fileName" 
 								placeholder="Please Enter">
+								
+								<div ng-show="showValidationErrors">
+								<div style="line-height: 3px">&nbsp;</div>
+								<span class="errmsg"
+									ng-show="fileForm.fileName.$error.required">This is
+									required. </span>
+							</div>
 						</div>
 						<div class="col-md-3">
 							<label class="labelSubHeader" style="padding-top: 0">FILE
