code for delimiter and server ip

--- a/CodeGenUtility/src/main/resources/static/html/requestForm.html
+++ b/CodeGenUtility/src/main/resources/static/html/requestForm.html
@@ -69,7 +69,7 @@
 								id="serverIP"
 								ng-class="serverIP ? 'disabledDropDown' :'customDropDown'"
 								name="serverIP" ng-disabled="serverIP"
-								ng-model="file.serverIp">
+								ng-model="file.serverIP">
 								<option selected="selected" value="">Please Select</option>
 								<option ng-repeat="src in SFTPserverIPList">{{src.value}}</option>
 							</select>
