--- a/CodeGenUtility/src/main/resources/static/html/successpopupconnect.html
+++ b/CodeGenUtility/src/main/resources/static/html/successpopupconnect.html
@@ -5,7 +5,7 @@
 Database connection is successful.
 </div>
 <div class="modal-footer">
-    <button class="btn myPopups" type="button"
+    <button class="btn btn-primary myButton" style="width: 50px;" type="button"
 ng-click="close()">Ok</button>
 
 
