--- a/CodeGenUtility/src/main/resources/static/html/errorpopupconnect.html
+++ b/CodeGenUtility/src/main/resources/static/html/errorpopupconnect.html
@@ -4,6 +4,6 @@
 <div class="modal-body">Database connection is failed.Please enter
 	valid details and Try again.</div>
 <div class="modal-footer">
-	<button class="btn myPopups" type="button" ng-click="close()">Ok</button>
+	<button class="btn btn-primary myButton" style="width: 50px;" type="button" ng-click="close()">Ok</button>
 
 </div>
