--- a/CodeGenUtility/src/main/resources/static/index.html
+++ b/CodeGenUtility/src/main/resources/static/index.html
@@ -49,12 +49,12 @@
                            </a>
                     </li>
                     <li ng-class="'activeNavbar'">
-                           <a ng-click="redirectToRDBMS()" class="btn-lg">
+                           <a ng-click="" class="btn-lg">
                         <span class="glyphicon glyphicon-dashboard codegenIcons"></span>
                       </a>
                     </li>
                     <li ng-class="''">
-                           <a ng-click="redirectToJobStatus()" class="btn-lg">
+                           <a ng-click="" class="btn-lg">
                         <span class="glyphicon glyphicon-briefcase codegenIcons"></span>
                       </a>
                   </li>
